name:                GenerationY
version:             0.1.0.0
synopsis:            Automata in Haskell
-- description:         
license:             MIT
license-file:        LICENSE
author:              Matt Neary
maintainer:          neary.matt@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable GenerationY
  main-is:             main.hs
  hs-source-dirs:      src
  build-depends: gd                    >=3000.4.0 && <3000.5.0,
                 containers            >=0.5.6.3  && <0.6.0.0,
                 base                  >=4.8 && <4.9
  -- hs-source-dirs:      
  default-language:    Haskell2010
